# mundosvirtuales-terremoto

./: .gitignore  CMakeLists.txt  generate.bat  generateVS2017.bat
arduino/: TerremotoDevice.ino
arduino/AlarmDevice/: AlarmDevice.ino
arduino/TerremotoDevice/: Cryptography.cpp  Cryptography.h  ServerComm.cpp  ServerComm.h  TerremotoDevice.ino  TerremotoDeviceUpdated.ino  keywords.txt
arduino/libraries/ServerComm/: ServerComm.cpp  ServerComm.h  keywords.txt
src/: main.cpp
src/server/: ClientSensor.cpp  ClientSensor.h  ExceptionServer.h  ListSensors.cpp  ListSensors.h  RequestAlarm.cpp  RequestAlarm.h  ResponseAlarm.cpp  ResponseAlarm.h  ResponseSensors.cpp  ResponseSensors.h  ServerAlarm.cpp  ServerAlarm.h  ServerSensors.cpp  ServerSensors.h
src/utils/: ClientID.h  Exception.h  Queue.h  util.h
src/utils/communication/: ExceptionCommunication.h  PacketComm.h  ResponsePacket.cpp  ResponsePacket.h  ResponsePacketClient.h  ResponsePacketServer.h
src/utils/concurrency/: Concurrency.h  ExceptionConcurrency.h  Runnable.h
src/utils/logger/: ExceptionLogger.h  Logger.cpp  Logger.h
src/utils/network/: ClientTCP.cpp  ClientTCP.h  ExceptionNetwork.h  ServerTCP.cpp  ServerTCP.h  TcpComm.cpp  TcpComm.h  UdpComm.cpp  UdpComm.h
src/utils/platform/: ExceptionPlatform.h  SystemCall.cpp  SystemCall.h
src/utils/security/: Cryptography.cpp  Cryptography.h  ExceptionSecurity.h
